--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
             </div>
             </header>
             <nav>
-                <a href="idex.html"> Home </a>
+                <a href="index.html"> Home </a>
                 <a href="product.html"> Product </a>
                 <a href="about.html"> About </a>
                 <a href="contact.html"> Constant </a>
