--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
             </div>
             </header>
             <nav>
-                <a href="idex.html"> Home </a>
+                <a href="index.html"> Home </a>
                 <a href="product.html"> Product </a>
                 <a href="about.html"> About </a>
                 <a href="contact.html"> Constant </a>
